# Audion

./: .gitattributes  .gitignore  Changelog.txt  README.md  bump.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: feedback-issue.yml
src/: App.tsx  index.html  main.js  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_rpc.rs  lib.rs
src/js/: color.js  config.js  player.js  state.js  translations.js  ui.js  update.js  utils.js  visualizer.js
src/ts/: audio-settings.ts  color.ts  config.ts  discord.ts  lyrics.ts  player.ts  playlist.ts  state.ts  translations.ts  ui.ts  update.ts  utils.ts  visualizer.ts
